# learning_cmake

./: .gitignore  CMakeLists.txt  Readme.md  hello.c
libgreeter/: CMakeLists.txt  greeter.c
